--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-fixed-jsdom": "^0.0.9",
     "parcel": "^2.13.2",
     "process": "^0.11.10"
   },
